<resources>
    <string name="app_name">Card Manager</string>
    <string name="add">Add</string>
    <string name="show">Show</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="discount">Discount</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="card_types">Card types</string>
    <string name="cards">Cards</string>
    <string name="adding_card_type">Adding card type</string>
    <string name="editing_card_type">Editing card type</string>
    <string name="save">Save</string>
    <string name="holder">Holder</string>
    <string name="number">Number</string>
    <string name="adding_card">Adding card</string>
    <string name="editing_card">Editing card</string>
    <string name="drop">Drop database</string>
    <string name="first_add_card_type">You need to add one card type at least. Add now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_item">Delete item?</string>
    <string name="delete_all_cards_of_this_type">Delete all cards of this type first</string>
    <string name="error">Error</string>
    <string name="item_not_deleted">Item not deleted</string>
    <string name="item_not_deleted_because_cards_uses_this_type">Item not deleted because some cards uses this type</string>
    <string name="error_while_insert_data">Error while insert data</string>
    <string name="error_while_update_data">Error while update data</string>
    <string name="discount_values">Discount must be from 0 to 100 percent</string>
    <string name="name_values">Name must contains at least 2 characters</string>
    <string name="number_values">Card number can\'t be empty</string>
    <string name="drop_database">Do you really want to drop database?</string>
    <string name="database_was_dropped">Database was dropped</string>
    <string name="delete_all_cards">Delete all cards</string>
    <string name="delete_all_cards_really">Do you really want to delete all cards?</string>
    <string name="cards_was_deleted">Cards was deleted</string>
    <string name="nothing_to_show">Nothing to show. Click + to create item.</string>
</resources>
