<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_add"
        android:title="@string/add"
        android:orderInCategory="1"
        android:icon="@drawable/plus"
        app:showAsAction="always"/>

    <item android:id="@+id/action_edit"
        android:title="@string/edit"
        android:orderInCategory="2"
        android:icon="@drawable/pencil"
        app:showAsAction="always"/>

    <item android:id="@+id/action_delete"
        android:title="@string/delete"
        android:orderInCategory="3"
        android:icon="@drawable/delete"
        app:showAsAction="always" />

    <item android:id="@+id/action_card_types"
        android:title="@string/card_types"
        android:orderInCategory="4"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_delete_all_cards"
        android:title="@string/delete_all_cards"
        android:orderInCategory="5"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_drop_database"
        android:title="@string/drop"
        android:orderInCategory="6"
        app:showAsAction="never"
        />

</menu>